--- a/randovania/gui/logic_settings_window.ui
+++ b/randovania/gui/logic_settings_window.ui
@@ -24,7 +24,7 @@
     <item>
      <widget class="QTabWidget" name="tab_widget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="trick_level_tab">
        <attribute name="title">
@@ -155,7 +155,7 @@
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
-         <widget class="QLabel" name="damage_label">
+         <widget class="QLabel" name="damage_strictness_label">
           <property name="text">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This controls how strictly damage requirements are checked. The resolver will make sure you have at least X times as much energy as is required to satisfy damage requirements, where X is determined by the setting you choose.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
@@ -165,7 +165,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="damage_combo">
+         <widget class="QComboBox" name="damage_strictness_combo">
           <property name="currentText">
            <string>Medium (1.5×)</string>
           </property>
